Fixed - Specialized Refining no longer ignores all external supply/demand bonus
Fixed - Mantle Bore now working with Specialized Mining
Fixed - Catalytic Core now correctly working with Specialized Refining
Fixed - Centralization Bureau now properly applies output bonus when present
Fixed - Specialized industries no longer bug out when present on the same planet

Governments
Adjusted - Corporate Government: Stability Bonus calculation now scales of gross income, not net (Ignoring stability!)
Adjusted - Corporate Government: Base Income 1.2 -> 1.3
Adjusted - Corporate Government: Base Immigration malus -30 -> -20
Adjusted - Corporate Government immigration malus now scales with income up to -50 (-20 base, -1 per 10k income up to an additional -30 )
Fixed - Corporate Government stability will no longer enter a downward spiral on game load
Fixed - Corporate Government now properly unlocks up to max industry slots when permanent instead of adding 4 flat
Fixed - Corporate Government no longer applies the hazard rating upkeep modifier twice
Fixed - Underworld no longer applies the hazard rating upkeep modifier twice
Fixed - Monastic Order now properly increases marine XP
Fixed - Arcology now properly suppresses the heat conditions added by an orbital lamp
Fixed - Arcology now buildable where it should be (everywhere except lava & gas giants)
Fixed - Tooltip no longer displays "click to change" when it can't actually change
Fixed - Tooltip no longer displays "Permanent in X days" after it has become permanent
Fixed - Another Arcoship crash (Underworld Gov.)

Derelict Industries
Fixed - No longer (almost) exclusively spawn on abyss planets
Fixed - No longer spawn in hidden systems

Ruined Infrastructure
Added - A size 4 or larger colony that decivilizes will now always have ruined infrastructure of one of its former industries (if any)

World Wonders
Added - Setting for Cloud Painter to remove the planetary shield texture (only when present on the planet)